--- a/Suhply v5/css/landing.css
+++ b/Suhply v5/css/landing.css
@@ -137,65 +137,9 @@ header {
     width: 100%;
 }
 
-#img1 {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: auto;
-    width: 100%;
-}
-
-#img2 {
-    flex-grow: 5;
-    flex-shrink: 1;
-    flex-basis: auto;
-    width: 100%;
-}
-
-#img3 {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: auto;
-    width: 100%;
-}
-
-#img4 {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: auto;
-    width: 100%;
-}
-
-#img5 {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: auto;
-    width: 100%;
-}
-
-#img6 {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: auto;
-    width: 100%;
-}
-
-#img7 {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: auto;
-    width: 100%;
-}
-
-#img8 {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: auto;
-    width: 100%;
-}
 
 .content_rightpanel {
     flex: 1;
-    background: #f4f5f8;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -204,14 +148,29 @@ header {
 .content_rightpanel_aboveimagegrid {
     flex: 0.6;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     overflow: hidden;
 }
 
+.content_rightpanel_dummypanel,
+.content_rightpanel_productclass,
+.content_rightpanel_filterwrapper {
+    flex:1;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+.content_rightpanel_dummypanel {
+    margin-left: 0.75rem;
+}
+
+.content_rightpanel_filterwrapper {
+    justify-content:flex-end;
+}
+
 .content_rightpanel_imagegrid {
-    margin: 0.125rem 1rem 0rem 1rem;
-    /* background: white; */
     flex: 10;
     display: flex;
     flex-direction: row;
@@ -296,13 +255,12 @@ footer img {
 .scrollMore {
     background: rgba(255, 255, 255, 0.6);
     position: fixed;
-    width: 50%;
+    width: 100%;
     z-index: 999;
     bottom: 3.5rem;
     left: 0px;
     display: flex;
     justify-content: center;
-    margin-left:50%;
 }
 
 .scrollMoreIcon {
@@ -316,6 +274,24 @@ footer img {
 @media only screen and (min-width: 480px) {
     .content_leftpanel {
         display: flex;
+    }
+
+    .scrollMore {
+        margin-left:50%;
+        width:50%;
+    }
+
+    .content_rightpanel {
+        background: #f4f5f8;
+    }
+
+    .content_rightpanel_imagegrid {
+        margin: 0.125rem 1rem 0rem 1rem;
+    }
+
+    .content_rightpanel_dummypanel,
+    .content_rightpanel_productclass {
+        display:none;
     }
 }
 
